--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,14 +1,39 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@font-face {
+ font-family: 'NanumSquare';
+ font-weight: 400;
+ src: url(../font/NanumSquareR.eot);
+ src: url(../font/NanumSquareR.eot?#iefix) format('embedded-opentype'),
+      url(../font/NanumSquareR.woff) format('woff'),
+      url(../font/NanumSquareR.ttf) format('truetype');
+}
+@font-face {
+ font-family: 'NanumSquare';
+ font-weight: 700;
+ src: url(../font/NanumSquareB.eot);
+ src: url(../font/NanumSquareB.eot?#iefix) format('embedded-opentype'),
+      url(../font/NanumSquareB.woff) format('woff'),
+      url(../font/NanumSquareB.ttf) format('truetype');
+}
+@font-face {
+ font-family: 'NanumSquare';
+ font-weight: 300;
+ src: url(../font/NanumSquareL.eot);
+ src: url(../font/NanumSquareL.eot?#iefix) format('embedded-opentype'),
+      url(../font/NanumSquareL.woff) format('woff'),
+      url(../font/NanumSquareL.ttf) format('truetype');
+}
 
 html,
 body{ width:100%; height:100%; min-width:900px; -webkit-text-size-adjust:none;}
 html{ font-size:1em; overflow-x:hidden;}
-body{ font-size:0.813em;font-family: 'NanumSquare', sans-serif; color:#333333; line-height:1.5; letter-spacing:-1px;}
+body{ font-size:0.813em;font-family: 'NanumSquare', sans-serif; color:#3f3f3f; line-height:1.5; letter-spacing:-1px;}
 label{ cursor:pointer;}
 code{ display:block;}
 
 a:link, a:visited{ color:#333333; text-decoration:none;}
-a:hover, a:focus, a:active{ text-decoration:underline;}
+a:hover, a:focus, a:active{ text-decoration:none;}
 
 a, abbr, acronym, address, applet, article, aside, audio,
 b, blockquote, big, body,
@@ -58,7 +83,7 @@ mark, rp, rt, ruby, summary, time{ display:inline;}
 .c-button:not(:disabled) { cursor: pointer; }
 
 /** Mixin: Button Modifier -------------------------------------------------- */
-.ace .content .btn-area button.c-button--gray { background: #7b7b7b; }
+.ace .content .btn-area button.c-button--gray { background: #c5c5c5; }
 .ace .content .btn-area button.c-button--gray:hover { background: #6e6e6e; }
 .ace .content .btn-area button.c-button--red { background: #ea1a35; }
 .ace .content .btn-area button.c-button--red:hover { background: #d7142d; }
@@ -108,87 +133,100 @@ mark, rp, rt, ruby, summary, time{ display:inline;}
 .select-option .disabled span,
 .select-option .disabled strong {color: #bbb; text-decoration: line-through; background: none;}
 
-.ace {}
+.ace {padding-top:110px;}
 .ace .hide {display:none !important;}
 .ace .inner {}
-.ace header {position:relative;height:110px;border-bottom:1px solid #332e2e;}
+.ace header {position:relative;height:110px;border-bottom:1px solid #332e2e;position:fixed;top:0;z-index:40;left:0;right:0;background:#fff;}
 .ace header .inner {position:relative;width:900px;margin:0 auto;}
 .ace header h1 {position:absolute;top:38px;left:0;}
 .ace header p {position:absolute;top:43px;right:0;font-size:25px;color:#303030;line-height:25px;}
 
-.ace .content {position:relative;padding:0 0 40px 50%;background:#fff;}
-.ace .content:after {content:"";display:block;position:absolute;top:0;left: 0;bottom:0;right: 50%;margin-right: 200px;background:#f8f8f8;z-index:1;}
-.ace .content .step {position:absolute;top:0;left:50%;bottom:0;width:250px;margin-left:-450px;background:#f8f8f8;border-right:1px solid #e3e3e3;z-index:20;}
+.ace .content {position:relative;width:1002px;margin:0 auto;padding-left:299px;padding-bottom:50px;box-sizing:border-box;border-right:1px solid #dadada;border-left:1px solid #dadada;}
+.ace .content:after {content:"";position:absolute;top:0;left:0;bottom:0;background:#f8f8f8;width:299px;border-right:1px solid #e3e3e3;box-sizing:border-box;}
+.ace .content .step {position:absolute;top:0;left:0;bottom:0;width:299px;padding-left:50px;background:#f8f8f8;border-right:1px solid #e3e3e3;z-index:20;box-sizing:border-box;position:fixed;top:111px;left:50%;margin-left:-500px;bottom:80px;}
 .ace .content .step ol {padding-top:10px;}
 .ace .content .step ol li {margin-top:11px;font-size:23px;color:#332e2e;opacity:.25;}
 .ace .content .step ol li.active {opacity:1;}
 .ace .content .step ol li strong {display:none;}
 
-.ace .content .title {position:relative;margin-left:-200px;height:75px;background:#332e2e;font-size:20px;color:#fff;z-index:10;}
+.ace .content .step aside {position:absolute;bottom:0;left:0;}
+.ace .content .step aside {padding-left:50px;}
+.ace .content .step aside h4 {font-size:35px;line-height:42px;}
+.ace .content .step aside h4 strong {color:#ea1a35;font-weight:700;}
+.ace .content .step aside ol {width:180px;margin-top:9px;margin-left:3px;}
+.ace .content .step aside ol li {float:left;margin-right:20px;margin-bottom:13px;font-size:17px;color:#332e2e;opacity:1;line-height:20px;}
+.ace .content .step aside ol li strong {display:block;width:67px;height:27px;margin-bottom:8px;margin-left:-3px;background:#363636;color:#fff;font-size:15px;font-weight:700;line-height:27px;text-align:center;}
+
+
+.ace .content .title {position:relative;height:75px;background:#332e2e;font-size:20px;color:#fff;z-index:10;}
 .ace .content .title strong {display:block;float:left;width:30px;height:30px;margin:24px 0 0 30px;background:#fff;border-radius:30px;color:#303030;text-align:center;line-height:30px;}
 .ace .content .title span {display:block;float:left;margin:24px 0 0 20px;line-height:30px;}
 
-.ace .content .caution {position:relative;margin-left:-200px;padding:7px 0 15px 0;font-size:15px;line-height:23px;color:#7b7b7b;box-sizing:border-box;background:#fff;z-index:10;}
+.ace .content .caution {position:relative;padding:7px 0 15px 0;font-size:15px;line-height:23px;color:#7b7b7b;box-sizing:border-box;background:#fff;z-index:10;}
 .ace .content .caution p {position:relative;padding:11px 0 0 61px;}
 .ace .content .caution p:after {content:"";display:block;position:absolute;top:14px;left:30px;width:18px;height:18px;background:url("../img/ico.png") no-repeat 0 0;}
 .ace .content .caution p strong {position:absolute;left:470px;font-weight:normal;color:#332e2e;}
 .ace .content .caution p strong span {padding:0 3px 0 5px;color:#d2d2d2;}
 
-.ace .content .confirm-type {position:relative;height:540px;margin-left:-200px;padding:74px 0;border-top:1px solid #e3e3e3;border-bottom:1px solid #e3e3e3;background:#f8f8f8;text-align:center;box-sizing:border-box;font-size:30px;color:#303030;z-index:10;}
+.ace .content .confirm-type {position:relative;height:540px;padding:74px 0;border-top:1px solid #e3e3e3;border-bottom:1px solid #e3e3e3;background:#f8f8f8;text-align:center;box-sizing:border-box;font-size:30px;color:#303030;z-index:10;}
 .ace .content .confirm-type .pic {height:300px;line-height:300px;}
 .ace .content .confirm-type p {padding:9px;line-height:1.5;}
 .ace .content .confirm-type .ipin {float:left;width:300px;height:300px;margin-left:49px;border-right:1px solid #e3e3e3;box-sizing:border-box;}
 .ace .content .confirm-type .phone {float:left;width:300px;height:300px;box-sizing:border-box;}
 
-.ace .content .info {position:relative;margin-left:-200px;z-index:10;}
+.ace .content .info {position:relative;z-index:10;}
+.ace .content .info .title {height:80px;padding-left:30px;background:#f8f8f8;border-top:1px solid #fff;border-bottom:1px solid #dadada;font-size:23px;color:#303030;line-height:80px;font-weight:700;box-sizing:border-box;}
 .ace .content .info .stitle {position:relative;height:80px;background:#f8f8f8;border-bottom:1px solid #dadada;line-height:79px;font-size:23px;color:#303030;box-sizing:border-box;}
+.ace .content .info .stitle strong {font-weight:700;}
 .ace .content .info .stitle .inner {padding:0 30px;}
 .ace .content .info .stitle .essential {position:absolute;top:0;left:566px;font-size:15px;color:#7b7b7b;}
 .ace .content .info .stitle .essential span {display:block;position:absolute;top:28px;left:-15px;width:6px;height:6px;border-radius:6px;background:#ea1a35;font-size:0;}
-.ace .content .info ul li {position:relative;min-height:59px;border-top:1px solid #fff;background:#fff;border-bottom:1px solid #dadada;line-height:58px;box-sizing:border-box;overflow:hidden;}
+.ace .content .info ul li {position:relative;padding:15px 0 13px 0;min-height:59px;border-top:1px solid #fff;background:#fff;border-bottom:1px solid #dadada;box-sizing:border-box;overflow:hidden;}
 .ace .content .info ul li:after {content:"";display:block;height:0;font-size:0;line-height:0;clear:both;}
 .ace .content .info ul li .ti {position:relative;float:left;width:215px;padding-left:30px;font-size:20px;color:#888;box-sizing:border-box;z-index:10;}
-.ace .content .info ul li .ti span {display:inline-block;position:relative;top:12px;left:5px;width:6px;height:6px;border-radius:6px;background:#ea1a35;font-size:0;}
+.ace .content .info ul li .ti .essential {display:inline-block;position:relative;top:-17px;left:5px;width:6px;height:6px;border-radius:6px;background:#ea1a35;font-size:0;}
+.ace .content .info ul li .ti .stxt {display:block;font-size:15px;color:#7b7b7b;}
 .ace .content .info ul li .txt {position:relative;float:left;width:455px;padding:0 30px;font-size:20px;color:#303030;box-sizing:border-box;z-index:10;}
 .ace .content .info ul li .txt .essential {position:absolute;top:0;left:371px;width:100px;font-size:15px;color:#7b7b7b;}
-.ace .content .info ul li .txt label {margin-right:20px;}
+.ace .content .info ul li .txt label {margin-right:20px;display:inline-block;}
 .ace .content .info ul li.address .txt {padding:16px 30px;line-height:30px;}
 .ace .content .info ul li.address .txt span {display:block;color:#b4b4b4;font-weight:bold;}
 .ace .content .info ul li.address .txt p {font-size:17px;line-height:25px;}
 .ace .content .info ul li .btn-post {display:inline-block;position:relative;width:190px;height:40px;background:#ea1a35;border-radius:20px;padding-left:75px;color:#fff;font-size:20px;box-sizing:border-box;line-height:40px;}
 .ace .content .info ul li .btn-post:before {content:"";display:block;position:absolute;top:8px;left:40px;width:24px;height:24px;background:url("../img/ico.png") no-repeat -18px 0;}
-.ace .content .info ul li .input-red {position:absolute;top:0;left: 0;bottom:0;right:0;border:0;height:58px;line-height:58px;width:100%;box-sizing:border-box;padding:0 30px;}
+.ace .content .info ul li .input-red {position:absolute;top:-15px;left: 0;bottom:0;right:0;border:0;height:58px;line-height:58px;width:100%;box-sizing:border-box;padding:0 30px;}
 .ace .content .info ul li .input-red::-webkit-input-placeholder {color:#ea1a35;font-size:15px;}
 .ace .content .info ul li .input-red::-moz-placeholder {color:#ea1a35;font-size:15px;}
 .ace .content .info ul li .input-red:-ms-input-placeholder {color:#ea1a35;font-size:15px;}
 .ace .content .info ul li .input-red:-moz-placeholder {color:#ea1a35;font-size:15px;}
+.ace .content .info ul.add li .txt label {margin-bottom:8px;}
 
-.ace .content .btn-area {position:relative;margin-left:-200px;background:#fff;padding:30px 0 8px 29px;z-index:10;}
+.ace .content .btn-area {position:relative;background:#fff;padding:30px 0 8px 29px;z-index:10;}
 .ace .content .btn-area button {display:inline-block;width:200px;height:60px;line-height:60px;margin:0 2px;border:0;text-align:center;font-size:20px;color:#fff;}
 .ace .content .btn-area button.btn-home {width:405px;}
 
-.ace .content .result {position:relative;margin-left:-200px;height:420px;background:#fff;overflow:hidden;border-top:1px solid #e3e3e3;z-index:10;}
+.ace .content .result {position:relative;height:420px;background:#fff;overflow:hidden;border-top:1px solid #e3e3e3;z-index:10;}
 .ace .content .result .bg {position:absolute;top:31px;left:60px;}
 .ace .content .result .bg:after {content:"";display:block;width:90px;height:205px;margin-left:-22.5px;background:url("../img/screw.png") no-repeat 0 0;}
 .ace .content .result .txt {padding:92px 0 0 156px;font-size:22px;line-height:33px;color:#939191;}
 .ace .content .result .txt span {display:block;}
 .ace .content .result strong {display:block;position:relative;padding:103px 0 0 52px;font-size:35px;color:#000;z-index:20;line-height:48px;font-weight:normal;}
 
-.ace .content .banner {position:relative;margin-left:-200px;height:447px;font-size:15px;line-height:20px;color:#252525;background:#ebecea;letter-spacing:0;z-index:10;}
+.ace .content .banner {position:relative;height:447px;font-size:15px;line-height:20px;color:#252525;background:#ebecea;letter-spacing:0;z-index:10;}
 .ace .content .banner .inner {padding:165px 0 0 50px;}
 .ace .content .banner .inner span {display:block;margin-bottom:25px;font-size:20px;color:#7f7f7f;line-height:20px;letter-spacing:-1px;}
 .ace .content .banner .inner strong {display:block;margin-bottom:39px;font-weight:normal;font-size:40px;color:#e01733;line-height:40px;letter-spacing:-1px;}
 .ace .content .banner .swiper-pagination {position:absolute;top:80px;left:50px;width:221px;height:15px;color:#e01733;font-size:40px;text-align:center;}
 .ace .content .banner .swiper-pagination .swiper-pagination-total {color:#c5c5c3;}
-.ace .content .banner .swiper-button-next, .ace .content .banner .swiper-container-rtl .swiper-button-prev {top:90px;left:247px;width:24px;height:45px;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23ea1a35'%2F%3E%3C%2Fsvg%3E");background-size:24px 45px;}
-.ace .content .banner .swiper-button-prev, .ace .content .banner .swiper-container-rtl .swiper-button-next {top:90px;left:50px;width:24px;height:45px;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23ea1a35'%2F%3E%3C%2Fsvg%3E");background-size:24px 45px;}
+.ace .content .banner .swiper-button-next, .ace .content .banner .swiper-container-rtl .swiper-button-prev {top:90px;left:247px;width:24px;height:45px;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23c3c3c3'%2F%3E%3C%2Fsvg%3E");background-size:24px 45px;}
+.ace .content .banner .swiper-button-prev, .ace .content .banner .swiper-container-rtl .swiper-button-next {top:90px;left:50px;width:24px;height:45px;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23c3c3c3'%2F%3E%3C%2Fsvg%3E");background-size:24px 45px;}
 
-.ace footer {height:39px;border-top:1px solid #e3e3e3;box-sizing:border-box;background:#f8f8f8;font-size:12px;color:#332e2e;text-align:center;line-height:39px;z-index:30;letter-spacing:0;clear:both;}
-.ace footer:after {
-	content:"";display:block;position:absolute;left:0;right:0;top:-21px;height:21px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,0e0e0e+100&0+0,0.1+100 */
-	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(14,14,14,0.1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(14,14,14,0.1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(14,14,14,0.1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#1a0e0e0e',GradientType=0 ); /* IE6-9 */
-}
+
+.ace footer {border-top:1px solid #e3e3e3;font-size:12px;color:#332e2e;z-index:30;letter-spacing:0;clear:both;}
+.ace footer .inner {position:relative;width:900px;margin:0 auto;}
+.ace footer .copyright {height:39px;background:#f1f1f1;line-height:39px;text-align:right;}
+.ace footer .copyright img {position:absolute;top:13px;left:0;}
+.ace footer p {height:40px;line-height:40px;}
+.ace footer p span {margin:0 12px;}
+.ace footer p span:first-child {margin-left:0;}
+.ace footer p span:last-child {margin-right:0;}
